--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,6 @@ license = "MIT"
 repository = "https://github.com/serenity-rs/poise/"
 
 [dependencies]
-tokio = { version = "1.25.1", default-features = false } # for async in general
 futures-core = { version = "0.3.13", default-features = false } # for async in general
 futures-util = { version = "0.3.13", default-features = false } # for async in general
 once_cell = { version = "1.7.2", default-features = false, features = ["std"] } # to store and set user data
@@ -19,6 +18,7 @@ regex = { version = "1.6.0", default-features = false, features = ["std"] } # pr
 log = { version = "0.4.14", default-features = false } # warning about weird state
 derivative = "2.2.0"
 parking_lot = "0.12.1"
+tokio = "^1.34.0"
 
 [dependencies.serenity]
 default-features = false
@@ -26,8 +26,8 @@ features = ["builder", "client", "gateway", "model", "utils", "collector", "fram
 
 # version = "0.11.6"
 
-git = "https://github.com/serenity-rs/serenity"
-branch = "next"
+git = "https://github.com/neodyland/safe-serenity"
+rev = "ad85039fa594aaaa286497ce16e1f119800a74cd"
 
 # path = "../_downloaded/serenity"
 
